add strucutre and readme

--- a/src/algorithms/algorithm.tex
+++ b/src/algorithms/algorithm.tex
@@ -1,8 +1,6 @@
 \textbf{Let}
 \begin{itemize}
-	\item \(x\) be a symbol
-	\item \(y\) be another symbol
-	\item \(\mathcal{X}\) be a set
+	\item \(y\) be a symbol
 	\item \(\epsilon_k\), \(k=1,\dots,K\), be a sequence of positive numbers
 \end{itemize}
 
@@ -25,8 +23,6 @@
 		\[
 			\hat{A}^{(k+1)} = \left[ \hat{A}^{(k)} \quad \hat{A}_l \right]
 		\]
-
-		\item \textbf{Clean} the dishes
 	\end{enumerate}
 
 	\item[] \textbf{Return} \(\hat{y}^{(d_{\max})}\)
