--- a/src/packages.tex
+++ b/src/packages.tex
@@ -1,19 +1,14 @@
 % Document style
 \usepackage{geometry}
 \usepackage{afterpage}
-\usepackage{etoolbox}
 
 % Math notation
 \usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{amsthm}
-\usepackage{bbm}
-\usepackage{bm}
 
 % Graphics, colors, and plots
 \usepackage{xcolor}
 \usepackage{pgfplots}
-\usepackage{subcaption}
+\usepackage{tikz}
 
 % Tables and Titles
 \usepackage{booktabs}
@@ -35,8 +30,6 @@
     uniquelist=false,
     dashed=false
             ]{biblatex}
-\usepackage{csquotes}
 \usepackage{tocloft}
 \usepackage[hidelinks,breaklinks=true]{hyperref}
 \usepackage{pdfpages}
-\pdfoptionpdfminorversion=7
