--- a/src/setup_layout.tex
+++ b/src/setup_layout.tex
@@ -24,3 +24,6 @@
 \DeclareNameAlias{sortname}{family-given}
 \DeclareNameAlias{default}{family-given}
 \renewbibmacro{in:}{}
+
+% PDF inclusion
+\pdfoptionpdfminorversion=7
