Update the README, fix the splitting script

--- a/main.tex
+++ b/main.tex
@@ -66,6 +66,10 @@
             \label{sec:paper_i}
             \input{src/sections/introduction/overview_of_papers/paper_i}
 
+            \section{Paper II}
+            \label{sec:paper_ii}
+            Test text for paper II
+
         \chapter*{Sammanfattning på svenska}
         \label{ch:sammanfattning}
         \addcontentsline{toc}{chapter}{Sammanfattning på svenska}
