remove undefined custom commands from algorithm

--- a/src/algorithms/algorithm.tex
+++ b/src/algorithms/algorithm.tex
@@ -7,7 +7,8 @@
 \textbf{Initialize} \(\hat{y}^{(0)} = \hat{y}\)
 %
 \[
-	\hat{y} = \mathoperator{argmin}_{y \in \mathcal{Y}} \sum_{i=1}^n \mathcal{L}(y;\by_i)
+	\hat{y} =
+	\min_{y \in \mathcal{Y}} \sum_{i=1}^n \mathcal{L}(y;y_i)
 \]
 %
 
@@ -17,7 +18,7 @@
 	\begin{enumerate}
 		\item \textbf{Find}
 		\[
-			\hat{y}^{(k+1)} = \mathoperator{argmin}__{y \in \mathcal{Y}} \sum_{i=1}^n \mathcal{L}(y;\by_i)
+			\hat{y}^{(k+1)} = \min_{y \in \mathcal{Y}} \sum_{i=1}^n \mathcal{L}(y;y_i)
 			+ \sum_{i=1}^n \epsilon_k \mathcal{I}(y \neq \hat{y}^{(k)})
 		\]
 		\item \textbf{Stack}
