fix page counter hack

--- a/main.tex
+++ b/main.tex
@@ -29,7 +29,7 @@
         % List of papers
         \chapter*{List of Papers\addcontentsline{toc}{chapter}{List of papers}}
         \thispagestyle{empty}
-        \addtocounter{page}{6} % Accounting for left-aligned page and open right for dirt title, title, dedication
+        \addtocounter{page}{4} % Adjust this number (If no dedication or quote: 4, if one of them: 6, if both: 8)
         \input{src/sections/list_of_papers}
 
         % Acknowledgements
